fixed white space on the right

--- a/cfg/themes/roar/static/roar_template/Styles/roar.css
+++ b/cfg/themes/roar/static/roar_template/Styles/roar.css
@@ -148,7 +148,8 @@ padding-bottom: 10px!important
 }
 #lowernav {
 padding-top: 1.3em;
-left: 8.2em;
+/*left: 8.2em;   Causing right side whitespace*/
+margin-left: 8.2em;
 position: relative;
 }
 
